# anthropic-hackathon

./: .gitignore  .impeccable.md  11_klimaatkracht_tdd_implementation_plan.md  BRAND.md  CLAUDE.md  Caddyfile  Kavel-demo.m4a  PROGRESS.md  README.md  bank_food_idea_gaps.md  foodbank.db  prompt_webpage.md  pyproject.toml
.claude/: settings.json
context/: bank_food_idea.md  bank_food_idea_gaps.md  tone-guide.md
data/: TRACKING.md  alkmaar-2024.txt  almelo-2023.txt  almelo-2024.txt  almere-2024.txt  alphen-2024.txt  amersfoort-2024.txt  apeldoorn-2025.txt  arnhem-2024.txt  bergen-op-zoom-2024.txt  delft-2024.txt  den-haag-2024.txt  den-haag-2025.txt  denhelder-2023.txt  denhelder-2024.txt  deventer-2024.txt  dordrecht-2023.txt  dordrecht-2024.txt  drachten-2023.txt  drachten-2024.txt  ede-2024.txt  emmen-2024.txt  enschede-2023.txt  enschede-2024.txt  feiten-2023.txt  gouda-2024.txt  groningen-2024.txt  haarlem-2024.txt  hengelo-2024.txt  hoorn-2025.txt  jaarverslag-2023.txt  leeuwarden-2024.txt  leiden-2024.txt  lelystad-2023.txt  lelystad-2024.txt  nijmegen-2023.txt  nijmegen-2024.txt  oss-2024.txt  purmerend-2023.txt  purmerend-2024.txt  (+7 more)
df/: play ABC.md  play.md
docs/: sitemap.html  visual-todo.md
foodbank_project/: notes.txt
klimaatkracht/: .env.example  docker-compose.yml
klimaatkracht/backend/: pyproject.toml
klimaatkracht/backend/alembic/: env.py
klimaatkracht/backend/alembic/versions/: 0001_initial_schema.py
klimaatkracht/backend/app/: main.py
klimaatkracht/backend/app/core/: config.py  database.py
klimaatkracht/backend/app/models/: __init__.py
klimaatkracht/backend/app/routers/: chapters.py  fund.py  methodology.py  operations.py  reports.py
klimaatkracht/backend/app/services/: allocation_engine.py  attribution.py  impact_calculator.py  llm_client.py  operations_ingestor.py  pipeline.py  report_generator.py
klimaatkracht/backend/klimaatkracht_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
klimaatkracht/backend/tests/: conftest.py  test_allocation_engine.py  test_attribution.py  test_impact_calculator.py  test_operations_ingestor.py  test_operations_router.py  test_pipeline_e2e.py  test_report_generator.py  test_routers.py
klimaatkracht/backend/tests/fixtures/: __init__.py  simulation_q1_2026.json
migrations/: env.py
pitch/: fonts.html  pitch.html  pitch.qmd  theme.scss
scripts/: deploy-vercel.sh  deploy.sh  dev.sh  pdf_fill_kg.py  targeted_fill.py
support_docs/: 05_idea_ranking.csv  06_idea_ranking_v2.csv  09_idea_head_to_head.md  10_all_ideas_head_to_head.md  11_idea_food_bank_funding_head_to_head.md  criteria.md
video/: build.py  (+2 more)
(+270 files in other folders)
