[project]
name = "anthropic-hackathon"
version = "0.1.0"
description = "Climate-Action Packages for Dutch Foodbanks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlmodel>=0.0.21",
    "sqlalchemy>=2.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
