[project]
name = "anthropic-hackathon"
version = "0.1.0"
description = "Climate-Action Packages for Dutch Foodbanks"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "sqlmodel>=0.0.21",
    "sqlalchemy>=2.0",
    "argon2-cffi>=23.1",
    "fastapi[standard]>=0.115",
    "jinja2>=3.1",
    "itsdangerous>=2.2",
    "anthropic>=0.40",
    "python-multipart>=0.0.9",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "pdfplumber>=0.11.0",
    "loguru>=0.7.0",
    "rich>=13.0",
    "alembic>=1.13",
    "openai>=2.32.0",
]

[project.scripts]
ncc = "src.backend.preprocessing.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
