[project]
name = "klimaatkracht-backend"
version = "0.1.0"
description = "Klimaatkracht — food bank impact attribution platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "psycopg2-binary>=2.9",
    "anthropic>=0.40",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*", "tests*"]

[tool.ruff]
target-version = "py312"
line-length = 100
